--- a/templates/apps/home/profile.html
+++ b/templates/apps/home/profile.html
@@ -62,42 +62,27 @@
             <p>
                 <h4 style="color: rgb(213, 211, 211);">Achievements</h4>
                 <div class="profile_achievements">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <!-- <span></span> -->
+                     <h6 style="padding: 0;margin: 0;color: rgb(188, 186, 186);">No Achievements to show !</h6>
                 </div>
             </p>
             <hr>
             <p>
                 <h4 style="color: rgb(213, 211, 211);">Society/Clubs</h4>
                 <div class="profile_achievements">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <!-- <span></span> -->
+                    <h6 style="padding: 0;margin: 0;color: rgb(188, 186, 186);">No Society's to show !</h6>
                 </div>
             </p>
             <hr>
             <p>
                 <h4 style="color: rgb(213, 211, 211);">Recent Activity</h4>
                 <div class="profile_achievements">
-                    <div class="profile_recent_activity">
+                    <!-- <div class="profile_recent_activity">
                         <span></span>
                         <p>Tech Society <br>D3 Web</p>
-                    </div>
-                    <div class="profile_recent_activity">
-                        <span></span>
-                        <p>Tech Society <br>D3 Web</p>
-                    </div>
-                    <div class="profile_recent_activity">
-                        <span></span>
-                        <p>Tech Society <br>D3 Web</p>
-                    </div>
+                    </div> -->
+                    <h6 style="padding: 0;margin: 0;color: rgb(188, 186, 186);">No recent activity to show!</h6>
                 </div>
             </p>
             <hr>
