--- a/templates/includes/main_navbar.html
+++ b/templates/includes/main_navbar.html
@@ -6,10 +6,10 @@
         <a href="{% url 'home:home' %}" class="navbar__link"><i data-feather="home"></i><span>Home</span></a>
       </li>
       <li class="navbar__item {% if '/club/' in request.path %} navbar__item__new__background {% endif %}">
-        <a href="{% url 'club:club' club_data_pk_initial %}" class="navbar__link"><i data-feather="message-square"></i><span>Messages</span></a>        
+        <a href="{% url 'club:club' club_data_pk_initial %}" class="navbar__link"><i data-feather="message-square"></i><span>Society</span></a>        
       </li>
       <li class="navbar__item {% if '/tracking/' in request.path %} navbar__item__new__background {% endif %}">
-        <a href="{% url 'tracking:tracking' %}" class="navbar__link"><i data-feather="monitor"></i><span>Customers</span></a>        
+        <a href="{% url 'tracking:tracking' %}" class="navbar__link"><i data-feather="monitor"></i><span>Tracking</span></a>        
       </li>
       <li class="navbar__item">
         <a href="#" class="navbar__link"><i data-feather="folder"></i><span>Projects</span></a>        
