added old codes of hackathon:

--- a/templates/apps/club/club_detail.html
+++ b/templates/apps/club/club_detail.html
@@ -180,7 +180,7 @@
                 
                
                 
-                {% if user_value == edit_club_access %}
+                {% if edit_club_access == 0 %}
                 <div class="member_request_space">
                     <hr>
                     <h3 class="pt-3">Join Requests ({{pending_count}})</h3>
