--- a/templates/includes/main_navbar.html
+++ b/templates/includes/main_navbar.html
@@ -11,11 +11,11 @@
       <li class="navbar__item {% if '/tracking/' in request.path %} navbar__item__new__background {% endif %}">
         <a href="{% url 'tracking:tracking' %}" class="navbar__link"><i data-feather="monitor"></i><span>Tracking</span></a>        
       </li>
-      <li class="navbar__item">
-        <a href="#" class="navbar__link"><i data-feather="folder"></i><span>Projects</span></a>        
+      <li class="navbar__item {% if '/event/' in request.path %} navbar__item__new__background {% endif %}">
+        <a href="{% url 'event:view_forms' %}" class="navbar__link"><i data-feather="folder"></i><span>Events</span></a>        
       </li>
       <li class="navbar__item">
-        <a href="#" class="navbar__link"><i data-feather="archive"></i><span>Resources</span></a>        
+        <a href="{% url 'tender:tender_list' %}" class="navbar__link"><i data-feather="archive"></i><span>Resources</span></a>        
       </li>
       <li class="navbar__item">
         <a href="#" class="navbar__link"><i data-feather="help-circle"></i><span>Help</span></a>        
