added member adding from admin

--- a/templates/apps/home/profile.html
+++ b/templates/apps/home/profile.html
@@ -30,7 +30,7 @@
             <hr>
             <p>
                 <b style="font-size: x-large;">{{ user_profile_data.name }}</b><br>
-                {{ user_profile_data.bio }}
+                {{ user_profile_data.bio }} / {{ user_profile_data.user.email }}
             </p>
             <p>
                 <b><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
