--- a/static/assets/css/home/profile.css
+++ b/static/assets/css/home/profile.css
@@ -81,12 +81,16 @@
     flex-wrap: wrap;
 }
 .profile_recent_activity span,
+.profile_recent_activity span img,
 .profile_achievements span{
     background-color: grey;
     border: 1px solid white;
     border-radius: 50%;
     width: 55px;
     height: 55px;
+}
+.profile_recent_activity span img{
+    border: none;
 }
 .profile_recent_activity{
     flex-direction: column;
@@ -96,4 +100,34 @@
 }
 .profile_recent_activity p{
     text-align: center;
+}
+.Invitation_accept_btn{
+    background-color: transparent;
+    border: none !important;
+    border-radius: .3em;
+    color: white;
+}
+.Invitation_accept_btn:hover{
+    background-color: #299afd;
+}
+.modal-body p{
+    margin: 0;
+}
+.model_requested_club_detail{
+    overflow: hidden;
+    position: relative;
+}
+.model_requested_club_detail_background{
+    height: 200px;
+    width: 100%;
+    border-radius: 5px;
+}
+.model_requested_club_detail_logo{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 10px;
 }
